Mon Oct 30 23:09:36 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (isValid): Check that symmetric
	OTriangle instances are consistent with respect to boundary tag.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: New swap() method.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Add edge
	swapping, DecimateHalfEdge can now be used instead of DecimateVertex.

Mon Oct 30 16:59:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Increase
	penalty for boundary edges.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: OTriangle is not well
	suited for some algorithms, like DecimateVertex.  This new HalfEdge
	class gives access to edge objects and will improve performance for
	these algorithms.
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/Triangle.java: Add support for HalfEdge.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: New
	decimation algorithm, based on HalfEdge structure.  It is not
	equivalent to DecimateVertex because edges are not swapped yet.

Thu Oct 26 14:14:43 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/constraints: Add initial support for
	  different mesh constraints.

Fri Oct 13 17:17:30 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/validation/MinAngleFace.java: Also handle
	Triangle elements.

	* src/org/jcae/mesh/MeshValidOEMM.java: New program to validate
	triangle soups; this is needed because large meshes cannot be
	processed by MeshValid3D.
	* src/org/jcae/mesh/oemm/RawStorage.java: New getFacesIterator()
	method.

	* src/org/jcae/mesh/cad/CADExplorer.java: Add COMPSOLID.

Wed Oct 11 15:10:08 CEST 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src-occ/org/jcae/mesh/cad/occ/OCCShape.java: The object returned by
	OCCShape.reversed() has the same class as original.
